/*
 * Copyright 2012 Database Lab., Korea Univ.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

option java_package = "tajo.ipc";
option java_outer_classname = "MasterWorkerProtocol";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

import "MasterWorkerProtos.proto";
import "PrimitiveProtos.proto";
import "tajo_protos.proto";

message WorkerId {
  required string hostAddress = 1;
}

service MasterWorkerProtocolService {
  rpc getTask(WorkerId) returns (QueryUnitRequestProto);
  rpc statusUpdate (TaskStatusProto) returns (BoolProto);
  rpc ping (QueryUnitAttemptIdProto) returns (BoolProto);
}